ICTSD-96: Green icon shift resolved

--- a/web/modules/custom/it_route_trip_tools/assets/css/it-route-trip-tools.css
+++ b/web/modules/custom/it_route_trip_tools/assets/css/it-route-trip-tools.css
@@ -871,7 +871,6 @@ html body.path-plan-your-trip .main-container .row .region-highlighted {
   left: 0;
   font-weight: 700;
   font-size: 1.5rem;
-  margin-top: -7px;
   padding-top: 5px;
   padding-left: 2px;
   background-color: #80D80E;
@@ -890,7 +889,6 @@ html body.path-plan-your-trip .main-container .row .region-highlighted {
   left: 0;
   font-weight: 700;
   font-size: 1.1rem;
-  margin-top: -7px;
   padding-top: 9px;
   background-color: #80D80E;
   background-size: cover;
